--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,14 @@ dependencies:
   flutter:
     sdk: flutter
   realm: ^1.4.0
+  flutter_bloc: ^8.1.3
+  dio: ^4.0.6
+  equatable: ^2.0.3
+  dartz: ^0.10.1
+  get: ^4.6.5
+  get_it: ^7.2.0
+  pretty_dio_logger: ^1.1.1
+  responsive_framework: ^1.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
